--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-typography": "^2.8.0",
+    "gatsby-source-contentful": "^4.2.1",
     "node-sass": "^4.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
