--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sharp": "^2.10.1",
     "gatsby-plugin-typography": "^2.8.0",
     "gatsby-source-contentful": "^4.2.1",
+    "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-sharp": "^2.8.0",
     "node-sass": "^4.9.0",
     "react": "^16.12.0",
