--- a/package.json
+++ b/package.json
@@ -15,21 +15,36 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.26.1",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-sharp": "^2.10.1",
     "gatsby-plugin-typography": "^2.8.0",
-    "gatsby-source-contentful": "^4.2.1",
+    "gatsby-source-contentful": "^4.5.3",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-sharp": "^2.8.0",
     "node-sass": "^4.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19",
+    "typography-theme-funston": "^0.16.19",
+    "typography-theme-github": "^0.16.19",
+    "typography-theme-grand-view": "^0.16.19",
+    "typography-theme-irving": "^0.16.19",
+    "typography-theme-moraga": "^0.16.19",
+    "typography-theme-stern-grove": "^0.16.19",
+    "typography-theme-stow-lake": "^0.16.19",
+    "typography-theme-us-web-design-standards": "^0.16.19",
+    "typography-theme-wordpress-2010": "^0.16.19",
+    "typography-theme-wordpress-2011": "^0.16.19",
+    "typography-theme-wordpress-2012": "^0.16.19",
+    "typography-theme-wordpress-2013": "^0.16.19",
+    "typography-theme-wordpress-2014": "^0.16.19",
+    "typography-theme-wordpress-kubrick": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.1.2"
